fix align

--- a/css/signin.css
+++ b/css/signin.css
@@ -39,3 +39,9 @@ body {
   border-top-right-radius: 0;
 }
 
+.centers {
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    background-color: #b0e0e6;
+}
